# actix-web-ddd

./: .env  Cargo.toml  Makefile
migrations/2020-07-13-121936_create_todos/: up.sql
src/: app.rs  error_handler.rs  main.rs  schema.rs
src/domain/todos/: mod.rs  model.rs  repository.rs  usecase.rs
src/routes/: mod.rs  todos.rs
src/todos/: mod.rs  model.rs  routes.rs
